desktop version added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="icon">
         <img src="images/logo.svg">
     </div>
+    <!-- <div class="main"> -->
     <div class="navbar">
         <button class="btn1">
             <img src="images/icons8-menu-rounded-30.png" alt="">
@@ -27,25 +28,28 @@
             <li>FEATURE</li>
             <li>PRICING</li>
             <li>LOGIN</li>
-
         </div>
+
     </div>
     <div class="image">
         <img src="images/illustration-devices.svg">
 
     </div>
-    <div class="btn">
-        <button>NEW</button>
-        <h5>MONOGRAPH DASHBOARD</h5>
+    <div class="left">
+        <div class="btn">
+            <button>NEW</button>
+            <h5>MONOGRAPH DASHBOARD</h5>
+        </div>
+        <div class="power">
+            <h2>POWERFUL INSIGHTS INTO YOUR TEAM</h2>
+            <h5>Project planning and time tracking for agile teams.</h5>
+        </div>
+        <div class="demo">
+            <button>SCHEDULE A DEMO</button>
+            <h5>TO SEE A PREVIEW</h5>
+        </div>
     </div>
-    <div class="power">
-        <h2>POWERFUL INSIGHTS INTO YOUR TEAM</h2>
-        <h5>Project planning and time tracking for agile teams.</h5>
-    </div>
-    <div class="demo">
-        <button>SCHEDULE A DEMO</button>
-        <h5>TO SEE A PREVIEW</h5>
-    </div>
+</body>
 </body>
 
 </html>
